syntax = "proto3";

option java_package = "com.protobuf.model";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

// Scalar
message FullRecordProto {
  double _double = 1;
  float _float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 sint32 = 7;
  sint64 sint64 = 8;
  fixed32 fixed32 = 9;
  fixed64 fixed64 = 10;
  sfixed32 sfixed32 = 11;
  sfixed64 sfixed64 = 12;
  bool bool = 13;
  string string = 14;
  bytes bytes = 15;
}

// Enum
enum SimpleEnumProto {
  FIRST = 0;
  SECOND = 1;
  THIRD = 2;
}

message SimpleEnumMessageProto {
  SimpleEnumProto order = 1;
}

// Other Message
message OtherMessageAddressProto {
  string street = 1;
  int32 number = 2;
}

message OtherMessageWorkProto {
  OtherMessageAddressProto address = 1;
  string name = 2;
  fixed32 year = 3;
}

message OtherMessageRecordProto{
  string name = 1;
  int32 age = 2;
  OtherMessageAddressProto address = 3;
  OtherMessageWorkProto work = 4;
}