package com.github.pcimcioch.protobuf.model.field;

import java.util.Optional;

public enum ProtoType {
    DOUBLE,
    FLOAT,
    INT32,
    INT64,
    UINT32,
    UINT64,
    SINT32,
    SINT64,
    FIXED32,
    FIXED64,
    SFIXED32,
    SFIXED64,
    BOOL,
    STRING,
    BYTES,
    ENUM,
    MESSAGE;
}
